Fix B plan hero mascot overlap

--- a/styles-b.css
+++ b/styles-b.css
@@ -1867,9 +1867,9 @@ footer p {
     }
 
     .hero-mascot {
-      right: 18px;
-      bottom: 76px;
-      width: 104px;
+      right: 30px;
+      bottom: 156px;
+      width: 76px;
     }
   }
 
